# alternative

./: .gitignore  README.md  altplay.sln  build.sh  connection.cpp  connection.hpp  main.cpp
altplay/: CMakeLists.txt  LandauCalculations.txt  Makefile  altplay.vcxproj  bot.cpp  bot.hpp  config.conf  connection.cpp  connection.hpp  database_handler.cpp  database_handler.hpp  irctypes.h  later.cpp  later.h  log.txt  logger.cpp  logger.hpp  luaglue.cpp  main.cpp  message.hpp  parser.cpp  parser.hpp  script.lua  user.cpp  user.hpp  user_handler.cpp  user_handler.hpp
altplay/include/LuaBridge/: LuaBridge.h
altplay/include/LuaBridge/detail/: Stack.h
altplay/script/: luaglue.cpp  luaglue.h  luairccmd.cpp  luapcall.cpp  luapcall.h  script.cpp  script.h
altplay/script/lua/: bootstrap.lua
altplay/script/lua/chanconfig/: #altplay.dev.json
altplay/script/lua/modules.d/: 1000-chanconf.lua  1000-youtube.lua  500-ctcp.lua
altplay/script/lua/std/: chanconfig.lua  commands.lua  messages.lua
altplay/script/lua/utils/: table.lua
b/: CMakeCache.txt  Makefile  altplay  cmake_install.cmake  config.conf  log.txt
b/script/lua/: bootstrap.lua
b/script/lua/config/chanconf/: test.lua
b/script/lua/modules.d/: 1000-youtube.lua  3000-child.lua
b/script/lua/std/: chanconf.lua  commands.lua  messages.lua
